# scssdk-telemetry

./: .gitignore  .gitmodules  LICENSE  README.md  client.py  connection.py  cpp.py  csharp.py  master_structure.py  prototc.py  py.py  pyproject.toml  registrations.gitignore.cpp  scssdk_dataclasses.py  scssdk_telemetry.json  scssdk_telemetry.yaml  store.gitignore.cpp  telemetry_id.py  truckconnect.md  truckconnect.py  truckconnect_telemetry.json  value_storage.py
include/: extract_trailer_index.h  is_trailer_telemetry.h  size_of_scs_type.h  storage.h
src/: storage.cpp
src/scssdk_telemetry/: __main__.py  scssdk_dataclasses.py  scssdk_telemetry.json  scssdk_telemetry.yaml
src/scssdk_truckconnect/: __main__.py  cpp.py  csharp.py  docs.py  py.py  truckconnect.py  truckconnect_master_telemetry.json
